...
                }
            }
            .navigationTitle("Apple ID Debug")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button("Done") { dismiss() }
                }
            }
            .onAppear {
                updateCredentialStateLabel(.notFound)
            }
            .alert("Info", isPresented: $showingAlert) {
...
